--- a/package.json
+++ b/package.json
@@ -20,5 +20,10 @@
   "bugs": {
     "url": "https://github.com/lpakingan/challenge-12-employee-tracker/issues"
   },
-  "homepage": "https://github.com/lpakingan/challenge-12-employee-tracker#readme"
+  "homepage": "https://github.com/lpakingan/challenge-12-employee-tracker#readme",
+  "dependencies": {
+    "express": "^4.18.2",
+    "inquirer": "^8.2.4",
+    "mysql2": "^3.4.0"
+  }
 }
